// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AllQuestions /> snapshot test 1`] = `
<Connect(LanguageProvider)
  key="en"
  locale="en"
  messages={Object {}}
>
  <ConnectedRouter
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <AllQuestions />
  </ConnectedRouter>
</Connect(LanguageProvider)>
`;

exports[`Banner <AllQuestions /> 1`] = `
<div
  className="mt-2"
>
  <AllQuestions />
</div>
`;

exports[`Banner <Feed /> 1`] = `
<div
  className="mt-2"
>
  <UNDEFINED />
</div>
`;
